--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -7,30 +7,55 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Welcome to Mission to Mars!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}"/>
       </head>
       <body>
         <div class="container-fluid">
             <div class="jumbotron text-center">
               <h1>Mission to Mars</h1>
               <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data!</a></p>
-    </div> <br><br>
+    </div> <br>
     <div class="headline-news">
-      <h2>Latest Mars News</h2>
-      <h3>{{mars.headline_title}}</h3>
-      <p>{{mars.headline_par}}</p>
-    </div> <br><br>
-    <div class="featured-image">
+      <h2>Latest Mars News:</h2>
+      <h6>{{mars.headline_title}}</h6>
+      <p class="small">{{mars.headline_par}}</p>
+    </div> <br>
+    <div class="card-fluid float-left">
       <h2>Featured Mars Image</h2>
       <img src="{{mars.featured_img_url}}" alt="featured image">
 
     </div><br><br>
-    <div class="data-table">
-      <h4><strong>Mars Facts</strong></h4>
-      {{mars.df|safe}}
-      
-
-    </div><br><br>
+    <div class="card-fluid float-right table-striped table-bordered">
+      <h4 class="text-center"><strong>Mars Facts</strong></h4>
+      {{mars.df|safe}} 
     
+
+    </div><br><br><br><br>
+    
+    
+    <div class="card mx-auto" style="width:1000px; height:1000px;">
+      <div class="card-body">
+        <h4 class="text-center">Mars Hemispheres</h4><br>
+        <div class="card-fluid float-left mx-auto">
+          <img src="https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg" width="475" height="450" alt="hemisphere_pic_1">
+          <h6 class="text-center">Cerberus Hemisphere Enhanced</h6>
+        </div>
+        <div class="card-fluid float-right mx-auto ">
+          <img src="https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg" width="475" height="450" alt="hemisphere_pic_1">
+          <h6 class="text-center">Schiaparelli Hemisphere Enhanced</h6>
+      </div>
+      <div class="card-fluid float-left mx-auto">
+        <img src="https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg" width="475" height="450" alt="hemisphere_pic_1">
+        <h6 class="text-center">Syrtis Major Hemisphere Enhanced</h6>
+    </div>
+    <div class="card-fluid float-right mx-auto">
+      <img src="https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg" width="475" height="450" alt="hemisphere_pic_1">
+      <h6 class="text-center">Valles Marineris Hemisphere Enhanced</h6>
+  </div>
+
+
+
+    </div>
     
 
 
